--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -5,6 +5,12 @@
   "webDir": "dist",
   "bundledWebRuntime": false,
   "server": {
-    "androidScheme": "https"
+    "androidScheme": "https",
+    "cleartext": true,
+    "allowNavigation": ["*"]
+  },
+  "android": {
+    "allowMixedContent": true,
+    "loggingBehavior": "production"
   }
 }
